--- a/css/index.css
+++ b/css/index.css
@@ -16,25 +16,9 @@ body{
 	width: 100vw;
 }
 
-.options{
-	position: absolute;
-	top: 0;
-	right: 0;
-	height: 100vh;
-	padding: 0.5em 1em;
-}
-
 #plot-container{
-	background-color: #222;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 22em;
-	height: 100vh;
-	transform: translate(-90%,0);
+	width: 100%;
 	padding: 1em;
-	overflow-y: auto;
-	transition: 0.5s;
 }
 
 #plot-container h5{
@@ -50,9 +34,9 @@ body{
 	margin-bottom: 1em;
 }
 
-#plot-container:hover{
+/*#plot-container:hover{
 	transform: translate(0,0);
-}
+}*/
 
 #plot-container .label{
 	color: rgb(0,175,175);
@@ -91,4 +75,17 @@ body{
 	width: 0.25em;
 	background-color: white;
 	border-radius: 50%;
+}
+
+#loader{
+	background-color: white;
+	height: 100vh;
+	width: 100vw;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0 25vw;
 }
