--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body{
 	align-items: center;
 	justify-content: center;
 	flex-direction: row;
-	min-height: 100vh;
+	min-height: calc(100vh - 64px);
 	width: 100vw;
 }
 
@@ -60,9 +60,9 @@ body{
 }
 
 #sample-image{
-	max-height: 100vh;
-	max-width: 100vw;
-	/*height: 100%;*/
+	display: block;
+	height: 100%;
+	width: 100%;
 }
 
 #point-container{
@@ -86,6 +86,7 @@ body{
 	display: block;
 	height: 0.25em;
 	width: 0.25em;
+	transform: translate(-0.125em, -0.125em);
 	background-color: white;
 	border-radius: 50%;
 }
