--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,35 @@
 body{
 	margin: 0;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 ::-webkit-scrollbar {
     width: 0px;
 }
 
-.container{
+body > .container{
+	/*min-height: calc(100vh - 64px);*/
+	width: 100%;	
+	margin-top: 50px;
+	padding-top: 10px;
+}
+
+body > .container > .row{
+	min-height: calc(100vh - 144px)
+}
+
+body > .container > .row > .tabs-content.carousel-slider.carousel{
+	min-height: calc(100vh - 144px)
+}
+
+/*.container{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex-direction: row;
-	min-height: calc(100vh - 64px);
-	width: 100vw;
+}*/
+
+.auto-scroll{
+	overflow-y: auto;
 }
 
 #plot-container,
@@ -55,17 +71,20 @@ body{
 	/*padding-top: 60px;*/
 }
 
-#image-container{
+.image-container{
 	position: relative;
+	margin: auto;
 }
 
-#sample-image{
+.sample-image{
 	display: block;
-	height: 100%;
-	width: 100%;
+	/*height: 100%;*/
+	/*width: 100%;*/
+	max-height: 400px;
+	max-width: 400px;
 }
 
-#point-container{
+.point-container{
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -73,7 +92,7 @@ body{
 	width: 100%;
 }
 
-#click-field{
+.click-field{
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -103,4 +122,9 @@ body{
 	justify-content: center;
 	padding: 0 25vw;
 	z-index: 10;
+}
+
+.carousel-item{
+	overflow-y: auto;
+	min-height: calc(100vh - 114px - 10px)
 }
