Sleeve transfered to side.

--- a/css/index.css
+++ b/css/index.css
@@ -186,11 +186,9 @@ body > .container > .row > .tabs-content.carousel-slider.carousel{
 .hips-f			{ background-color: #5C97BF; border-color: #5C97BF!important; }
 .inseam-f		{ background-color: #87D37C; border-color: #87D37C!important; }
 .neck-f			{ background-color: #E9D460; border-color: #E9D460!important; }
-.sleeve-f		{ background-color: #F4B350; border-color: #F4B350!important; }
 .height-f		{ background-color: #ECF0F1; border-color: #ECF0F1!important; }
-.body-length-f	{ background-color: #6BB9F0; border-color: #6BB9F0!important; }
-.body-sweep-f	{ background-color: #1E8BC3; border-color: #1E8BC3!important; }
 
+.sleeve-s	{ background-color: #F4B350; border-color: #F4B350!important; }
 .chest-s	{ background-color: #EC644B; border-color: #EC644B!important; }
 .waist-s	{ background-color: #D2527F; border-color: #D2527F!important; }
 .hips-s		{ background-color: #9B59B6; border-color: #9B59B6!important; }
