--- a/css/index.css
+++ b/css/index.css
@@ -82,7 +82,12 @@ body > .container > .row > .tabs-content.carousel-slider.carousel{
 .image-container{
 	position: relative;
 	margin: auto;
+	transition: 0.3s;
 }
+
+/*.image-container:hover{
+	transform: scale(1.5, 1.5);
+}*/
 
 .sample-image{
 	display: block;
@@ -149,10 +154,11 @@ body > .container > .row > .tabs-content.carousel-slider.carousel{
 }
 
 .toolbar{
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
+	z-index: 1;
 }
 
 .toolbar ul{
@@ -183,6 +189,17 @@ body > .container > .row > .tabs-content.carousel-slider.carousel{
 .select-dropdown img{
 	object-fit: cover;
 	object-position: center;
+}
+
+footer{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+}
+
+input[type=range]{
+	border: none;
 }
 
 .shoulder-f		{ background-color: #EC644B; border-color: #EC644B!important; }
